--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -112,7 +112,7 @@
           .table {
             width: 100%;
             thead {
-              border-bottom: 0.0625rem solid $default-gray; // 1px
+              border-bottom: 0.0625rem solid map-get($gray, "default"); // 1px
               tr {
                 display: flex;
                 flex-direction: row;
@@ -126,10 +126,10 @@
               white-space:nowrap;
             }
             th { 
-              color: $light-black;
+              color: map-get($black, "light");
             }
             td {
-              color: $dark-gray;
+              color: map-get($gray, "dark");
             }
             tbody {
               width: 100%;
@@ -159,7 +159,7 @@
               }
               &-row {
                 flex: 1;
-                border: 0.0625rem solid $line-gray; // 1px
+                border: 0.0625rem solid map-get($gray, "line"); // 1px
                 padding: 1.25rem 2.5rem; // 20px 40px
                 &-content {
                   a {
@@ -170,7 +170,7 @@
                       h5 {
                         &:first-child {
                           font-weight: $font-weight-medium;
-                          color: $light-black;
+                          color: map-get($black, "light");
                         }
 
                         &:last-child {
@@ -184,20 +184,20 @@
                   button {
                     padding: 0;
                     .icon-delete {
-                      background: $pressed-gray;
+                      background: map-get($gray, "pressed");
                     }
                   }
                 }
                 &-topic {
                   height: 100%;
-                  color: $dark-gray;
+                  color: map-get($gray, "dark");
                   h5 {
                     font-weight: $font-weight-regular;
                   }
                 }
                 &-info {
                   h5 {
-                    color: $dark-gray;
+                    color: map-get($gray, "dark");
                     font-weight: $font-weight-regular
                   }
                 }
@@ -207,8 +207,8 @@
           // 추가
           .related-add {
             height: 11.5625rem; // 185px
-            border: 0.0625rem solid $line-gray; // 1px
-            background-color: $light-gray;
+            border: 0.0625rem solid map-get($gray, "line"); // 1px
+            background-color: map-get($gray, "light");
             margin: 0.625rem 0.625rem 0 0; // 10px 10px 0 0
             display: flex;
           }
@@ -221,16 +221,16 @@
           .list-item {
             padding: 1.25rem 1.5625rem; // 20px 25px
             margin: 0.625rem 0.625rem 0 0; // 10px 10px 0 0
-            border: 0.0625rem solid $line-gray; // 1px
+            border: 0.0625rem solid map-get($gray, "line"); // 1px
             border-radius: 0.1875rem; // 3px
-            background-color: $light-gray;
+            background-color: map-get($gray, "light");
             .comment {
               &-row {
-                color: $dark-gray;
+                color: map-get($gray, "dark");
                 margin-top: 0.625rem; // 10px
                 word-break: break-word;
                 &-info {
-                  .user-name { color: $dark-gray; }
+                  .user-name { color: map-get($gray, "dark"); }
                   .user-date-time { 
                     color: $gray;
                     margin-left: 0.625rem; // 10px
@@ -238,7 +238,7 @@
                   button {
                     padding: 0;
                     .icon-delete {
-                      background: $pressed-gray;
+                      background: map-get($gray, "pressed");
                     }
                   }
                   div:last-child {
