--- a/src/main/resources/public/src/scss/formRefactoring/_buttons.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_buttons.scss
@@ -49,7 +49,7 @@
 
   .icon-clipboard {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_clipboard.svg', 1.25rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 20px 20px
+    @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_clipboard.svg', 1.25rem, 1.25rem, no-repeat, center, null, map-get($gray, "pressed")); // 20px 20px
   }
 }
 
@@ -78,22 +78,22 @@
       pointer-events: none;
 
       &.icon-align-left {
-        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_align_left.svg', 20px, 18px, no-repeat, center, null, $light-black); // 20px 18px
+        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_align_left.svg', 20px, 18px, no-repeat, center, null, $btn-switch-font-color); // 20px 18px
       }
       &.icon-align-center {
-        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_align_center.svg', 20px, 18px, no-repeat, center, null, $light-black); // 20px 18px
+        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_align_center.svg', 20px, 18px, no-repeat, center, null, $btn-switch-font-color); // 20px 18px
       }
       &.icon-align-right {
-        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_align_right.svg', 20px, 18px, no-repeat, center, null, $light-black); // 20px 18px
+        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_align_right.svg', 20px, 18px, no-repeat, center, null, $btn-switch-font-color); // 20px 18px
       }
       &.icon-position-left {
-        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_label_position_left.svg', 20px, 20px, no-repeat, center, null, $light-black); // 20px 20px
+        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_label_position_left.svg', 20px, 20px, no-repeat, center, null, $btn-switch-font-color); // 20px 20px
       }
       &.icon-position-top {
-        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_label_position_top.svg', 20px, 20px, no-repeat, center, null, $light-black); // 20px 20px
+        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_label_position_top.svg', 20px, 20px, no-repeat, center, null, $btn-switch-font-color); // 20px 20px
       }
       &.icon-position-hidden {
-        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_label_position_hidden.svg', 20px, 20px, no-repeat, center, null, $light-black); // 20px 20px
+        @include maskImage('#{$icon-folder-path}formRefactoring/property/icon_label_position_hidden.svg', 20px, 20px, no-repeat, center, null, $btn-switch-font-color); // 20px 20px
       }
     }
     // if text exist
@@ -167,13 +167,13 @@
       pointer-events: none;
 
       &.icon-bold {
-        @include maskImage('#{$icon-folder-path}form/property/icon_bold.svg', 16px, 20px, no-repeat, center, null, $light-black); // 16px 20px
+        @include maskImage('#{$icon-folder-path}form/property/icon_bold.svg', 16px, 20px, no-repeat, center, null, $btn-toggle-font-color); // 16px 20px
       }
       &.icon-italic {
-        @include maskImage('#{$icon-folder-path}form/property/icon_italic.svg', 20px, 20px, no-repeat, center, null, $light-black); // 20px 20px
+        @include maskImage('#{$icon-folder-path}form/property/icon_italic.svg', 20px, 20px, no-repeat, center, null, $btn-toggle-font-color); // 20px 20px
       }
       &.icon-underline {
-        @include maskImage('#{$icon-folder-path}form/property/icon_underline.svg', 20px, 20px, no-repeat, center, null, $light-black); // 20px 20px
+        @include maskImage('#{$icon-folder-path}form/property/icon_underline.svg', 20px, 20px, no-repeat, center, null, $btn-toggle-font-color); // 20px 20px
       }
     }
     // if text exist
