--- a/src/main/resources/public/src/scss/portal/_email-certification.scss
+++ b/src/main/resources/public/src/scss/portal/_email-certification.scss
@@ -23,7 +23,7 @@
 
   h1 { line-height: 1.7; }
   h3 { 
-    color: $dark-gray; 
+    color: map-get($gray, "dark");
     margin: 1.25rem 0 5rem 0; // 20px 0 80px 0
   }
 }
