--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -116,7 +116,7 @@
                 vertical-align: middle;
                 &:hover { background-color: rgba(230, 232, 235, 0.6); }
   
-                a { color: $dark-gray; }
+                a { color: map-get($gray, "dark"); }
               }
             }
           }
@@ -153,7 +153,7 @@
               &-content {
                 font-size: 1rem; // 16px
                 font-weight: $font-weight-regular;
-                color: $dark-gray;
+                color: map-get($gray, "dark");
   
                 .keyword { color: $keyword-font-color; }
               }
@@ -203,7 +203,7 @@
               right: 0.9375rem; // 15px
               display: inline-block;
               opacity: 1;
-              @include maskImage('#{$icon-folder-path}icon_plus.svg', 16px, 16px, no-repeat, center, 16px 16px, $pressed-gray);
+              @include maskImage('#{$icon-folder-path}icon_plus.svg', 16px, 16px, no-repeat, center, 16px 16px, map-get($gray, "pressed"));
             }
   
             .icon-minus {
@@ -211,7 +211,7 @@
               right: 0.9375rem; // 15px
               display: inline-block;
               opacity: 0;
-              @include maskImage('#{$icon-folder-path}icon_minus.svg', 16px, 16px, no-repeat, center, 16px 16px, $pressed-gray);
+              @include maskImage('#{$icon-folder-path}icon_minus.svg', 16px, 16px, no-repeat, center, 16px 16px, map-get($gray, "pressed"));
             }
           }
 
