--- a/src/main/resources/public/src/scss/portal/_login.scss
+++ b/src/main/resources/public/src/scss/portal/_login.scss
@@ -42,7 +42,7 @@
     &::before {
       content: '';
       flex-grow: 1;
-      background: $line-gray;
+      background: map-get($gray, "line");
       height: 0.063rem; // 1px
       margin-right: 1rem; // 16px
     }
@@ -50,7 +50,7 @@
     &::after {
       content: '';
       flex-grow: 1;
-      background: $line-gray;
+      background: map-get($gray, "line");
       height: 0.063rem; // 1px
       margin-left: 1rem; // 16px
     }
@@ -71,7 +71,7 @@
     color: $login-form-font-color;
     margin-top: 6.188rem; // 99px
 
-    @include verticalBar(1.25rem, 2.5rem, 0.0625rem solid $line-gray, 0 1.875rem 0 0); // 30px,  40px
+    @include verticalBar(1.25rem, 2.5rem, 0.0625rem solid map-get($gray, "line"), 0 1.875rem 0 0); // 30px,  40px
 
     a { color: $login-form-font-color; }
 
