--- a/src/main/resources/public/src/scss/process/_buttons.scss
+++ b/src/main/resources/public/src/scss/process/_buttons.scss
@@ -51,44 +51,44 @@
   height: 4.375rem; // 70px
   padding: 0;
   margin: 0.313rem 0.313rem 0 0.313rem; // 5px
-  border: 0.063rem solid $line-gray;
+  border: 0.063rem solid map-get($gray, "line");
   
   .icon-text {
     display: block;
     font-size: 14px; // 14px
     font-weight: $font-weight-regular;
-    color: $light-black;
+    color: map-get($black, "light");
   }
 
   .icon-event {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/element-palette/icon_event.svg', 26px, 26px, no-repeat, center, null, $pressed-gray); // 26px 26px 
+    @include maskImage('#{$icon-folder-path}process/element-palette/icon_event.svg', 26px, 26px, no-repeat, center, null, $icon-rectangle-menu-color); // 26px 26px
   }
   .icon-task {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/element-palette/icon_task.svg', 24px, 24px, no-repeat, center, null, $pressed-gray); // 24px 24px 
+    @include maskImage('#{$icon-folder-path}process/element-palette/icon_task.svg', 24px, 24px, no-repeat, center, null, $icon-rectangle-menu-color); // 24px 24px
   }
   .icon-subprocess {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/element-palette/icon_subprocess.svg', 24px, 24px, no-repeat, center, null, $pressed-gray); // 24px, 24px
+    @include maskImage('#{$icon-folder-path}process/element-palette/icon_subprocess.svg', 24px, 24px, no-repeat, center, null, $icon-rectangle-menu-color); // 24px, 24px
   }
   .icon-gateway {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/element-palette/icon_gateway.svg', 30px, 30px, no-repeat, center, null, $pressed-gray); // 30px 30px 
+    @include maskImage('#{$icon-folder-path}process/element-palette/icon_gateway.svg', 30px, 30px, no-repeat, center, null, $icon-rectangle-menu-color); // 30px 30px
   }
   .icon-group {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/element-palette/icon_group.svg', 24px, 24px, no-repeat, center, null, $pressed-gray); // 24px 24px 
+    @include maskImage('#{$icon-folder-path}process/element-palette/icon_group.svg', 24px, 24px, no-repeat, center, null, $icon-rectangle-menu-color); // 24px 24px
   }
   .icon-annotation {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/element-palette/icon_annotation.svg', 24px, 24px, no-repeat, center, null, $pressed-gray); // 24px 24px 
+    @include maskImage('#{$icon-folder-path}process/element-palette/icon_annotation.svg', 24px, 24px, no-repeat, center, null, $icon-rectangle-menu-color); // 24px 24px
   }
   // Connector 
   &.connector {
     position: absolute;
     bottom: 5rem; // 80px
-    background-color: $light-gray;
+    background-color: map-get($gray, "light");
 
     .icon-connector {
       display: inline-block;
@@ -98,17 +98,17 @@
     }
     // 선택시
     &.selected {
-      border-color: $point-blue;
+      border-color: $blue;
       background-color: $white;;
-      .icon { background: $point-blue;}
-      .icon-text { color: $point-blue; }
+      .icon { background: $blue;}
+      .icon-text { color: $blue; }
     }
   }
   // Background
   &.move-icon {
     position: absolute;
     bottom: 0.313rem; // 5px
-    background-color: $light-gray;
+    background-color: map-get($gray, "light");
 
     .icon-background {
       display: inline-block;
@@ -118,10 +118,10 @@
     }
     // 선택시
     &.selected {
-      border-color: $point-blue;
+      border-color: $blue;
       background-color: $white;;
-      .icon { background: $point-blue;}
-      .icon-text { color: $point-blue; }
+      .icon { background: $blue;}
+      .icon-text { color: $blue; }
     }
   }
 }
@@ -136,13 +136,13 @@
   padding: 0;
   // pressed
   &.active {
-    border-color: $point-blue;
-    .icon-minimap { background: $point-blue; }
+    border-color: $blue;
+    .icon-minimap { background: $blue; }
   }
 
   .icon-minimap {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/editor/icon_map.svg', 1.063rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 17px 20px 
+    @include maskImage('#{$icon-folder-path}process/editor/icon_map.svg', 1.063rem, 1.25rem, no-repeat, center, null, map-get($gray, "pressed")); // 17px 20px
   }
 }
 
@@ -156,13 +156,13 @@
   padding: 0;
   // pressed
   &.active {
-    border-color: $point-blue;
-    .icon-simulation-report { background: $point-blue; }
+    border-color: $blue;
+    .icon-simulation-report { background: $blue; }
   }
 
   .icon-simulation-report {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/editor/icon_simulation_report.svg', 1.25rem, 1rem, no-repeat, center, null, $pressed-gray); // 20px 16px
+    @include maskImage('#{$icon-folder-path}process/editor/icon_simulation_report.svg', 1.25rem, 1rem, no-repeat, center, null, map-get($gray, "pressed")); // 20px 16px
     vertical-align: baseline; // TODO: 아이콘 위치가 다른 아이콘과 조금 다름
   }
 }
@@ -175,7 +175,7 @@
 
   .icon-clipboard {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}process/editor/icon_clipboard.svg', 1.25rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 20px 20px 
+    @include maskImage('#{$icon-folder-path}process/editor/icon_clipboard.svg', 1.25rem, 1.25rem, no-repeat, center, null, map-get($gray, "pressed")); // 20px 20px
   }
 }
 
@@ -188,7 +188,7 @@
 
   .icon-plus {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}icon_plus.svg', 24px, 24px, no-repeat, center, 20px 20px, $pressed-gray);
+    @include maskImage('#{$icon-folder-path}icon_plus.svg', 24px, 24px, no-repeat, center, 20px 20px, map-get($gray, "pressed"));
   }
 }
 
@@ -209,6 +209,6 @@
 button {
   .icon-delete {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}form/tooltip/icon_delete.svg', 1.25rem, 1.25rem, no-repeat, center, null, $pressed-gray); // 20px 20px 
+    @include maskImage('#{$icon-folder-path}form/tooltip/icon_delete.svg', 1.25rem, 1.25rem, no-repeat, center, null, map-get($gray, "pressed")); // 20px 20px
   }
 }
