--- a/src/main/resources/public/src/scss/template/_tree.scss
+++ b/src/main/resources/public/src/scss/template/_tree.scss
@@ -113,10 +113,10 @@ span.node {
 span.node_selected,
 span.modal_node_selected,{
   padding: 0.25rem 0.188rem 0.25rem 0; // 4px 3px 4px 0
-  background-color: $light-blue;
+  background-color: map-get($blue, "light");
   label {
     padding-left: $tree-folder-margin-left;
-    color: $dark-blue;
+    color: map-get($blue, "dark");
     cursor: pointer;
   }
   cursor: pointer;
